results/scraper/launchpad-without-comments/1824528
qemu fails to compile on gcc 9 `error: taking address of packed member of ‘struct <anonymous>’ may result in an unaligned pointer value [-Werror=address-of-packed-member]`

Qemu compilation fails with below error on ppc64le host with gcc 9(9.0.1 20190328)
repo: https://github.com/qemu/qemu.git
branch: master
commit e1be98540ee672ef93292b65a986055512237c35


  CC      net/dump.o
hw/usb/dev-mtp.c: In function ‘usb_mtp_write_metadata’:
hw/usb/dev-mtp.c:1708:36: error: taking address of packed member of ‘struct <anonymous>’ may result in an unaligned pointer value [-Werror=address-of-packed-member]
 1708 |                             dataset->filename);
      |                             ~~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
  CC      net/eth.o
make: *** [/home/kvmci/qemu-main/rules.mak:69: hw/usb/dev-mtp.o] Error 1
make: *** Waiting for unfinished jobs....
  CC      net/announce.o